# src/main/java/co/altir/ems/model/organization/EmployeeFilter.java
@@ -14,5 +14,7 @@ public class EmployeeFilter {
 
   private List<UUID> organization;
 
+  private EmployeeRole role;
+
   private Boolean active;
 }
